--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     	<h2 style="color:#0719D4;">A</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">L</h2>
+    	<h2 style="color:#D14D39;">A</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">I</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">Y</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
@@ -143,7 +143,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Aliya Cindy Naomi♡</p>
+				<p>a very happy birthday NAME♡</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
