--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
     </div>
+		<div class="balloons text-center" id="7">
+    	<h2 style="color:#D14D39;">h</h2>
+		</div>
+	<div class="balloons text-center" id="b8">
+    	<h2 style="color:#8377E4;">j</h2>
+	<div class="balloons text-center" id="b1">
+    	<h2 style="color:#0719D4;">m</h2>
+	</div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
