--- a/index.html
+++ b/index.html
@@ -36,29 +36,21 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">A</h2>
+    	<h2 style="color:#0719D4;">S</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">A</h2>
+    	<h2 style="color:#D14D39;">E</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">A</h2>
+    	<h2 style="color:#8FAD00;">p</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">A</h2>
+    	<h2 style="color:#8377E4;">T</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">I</h2>
     </div>
-		<div class="balloons text-center" id="7">
-    	<h2 style="color:#D14D39;">h</h2>
-		</div>
-	<div class="balloons text-center" id="b8">
-    	<h2 style="color:#8377E4;">j</h2>
-	<div class="balloons text-center" id="b1">
-    	<h2 style="color:#0719D4;">m</h2>
-	</div>
-
+	
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
 
